after adding favicon

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="desctop.css">
     <link rel="stylesheet" href="mobile.css">
-    <title>Document</title>
+    <title>Gaming Landing Page Design</title>
+    <link rel="shortcut icon" width="1px" href="images/Frame.png" type="image/x-icon">
 </head>
 
 <body>
